src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

:root {
  --bg-color: #1092c2;
  --acc-color: #00202e;
}

body,
#root {
  width: 100vw;
  height: 100vh;
  overflow-x: hidden;
  display: flex;
  align-items: center;
  flex-direction: column;
  font-family: "Poppins", sans-serif;
  background-color: var(--bg-color);
  color: white;
}

header {
  width: 80%;
  height: 10%;
  position: sticky;
  margin-top: 3em;
  display: flex;
  align-items: center;
  justify-content: space-between;
  z-index: 10;
}

header a {
  text-decoration: none;
  color: aliceblue;
}

header>div:nth-child(1)>h1 {
  font-weight: 800;
  font-size: 1.5em;
}

header>div:nth-child(2) {
  width: 35%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: end;
}

section {
  width: 100%;
  height: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.menu {
  display: none;
  flex-direction: column;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: start;
  background-color: var(--acc-color);
  border-radius: 5px;
  padding: 1em;
  z-index: 5;
  transition: transform 0.5s ease-in-out;
  transform: translateY(-100%);
}

.menu>div {
  height: 65%;
  width: 81%;
  display: flex;
  align-items: start;
  flex-direction: column;
  justify-content: end;
  gap: 5%;
}

.menu a {
  font-size: 150%;
  color: white;
  text-decoration: none;
  padding: 0.5em 0;
}

.menu.open {
  display: flex;
  opacity: 1;
  transform: translateY(0);
}

#avatarContainer {
  border-radius: 50%;
  min-width: 18em !important;
  min-height: 18em !important;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--acc-color);
  overflow: hidden;
  margin-top: 2em;
}

#avatar {
  border-radius: 50%;
  max-width: 100% !important;
  height: auto;
}

@media only screen and (max-width: 450px) {
  #avatarContainer {
    width: 300px;
    height: 300px;
  }
}

#aboutMe {
  min-height: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
}

#introduction {
  width: 80%;
  height: 80%;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: start;
  margin-top: 2em;
  gap: 2em;
}

#introduction>div:nth-child(1) {
  width: 100%;
  height: 10%;
  display: flex;
  align-items: start;
  flex-direction: column;
  justify-content: start;
  h3 {
    font-weight: 400;
  }
}

#introduction>div:nth-child(2) {
  width: 100%;
  min-height: 20%;
  display: flex;
  align-items: start;
  flex-direction: column;
  justify-content: space-evenly;

  p {
    font-weight: 200;
    font-size: 90%;
  }
}

#project {
  width: 80%;
  min-height: 40% !important;
  display: flex;
  align-items: start;
  flex-direction: column;
  justify-content: start;
  margin-top: 4em;
  margin-bottom: 4em;
}

#project>h3 {
  margin-left: 1em;
}

#projectContainer {
  width: 100%;
  height: 100%;
  overflow-x: auto;
  display: flex;
  align-items: center;
  justify-content: start;
  flex-wrap: nowrap;
  gap: 2em;
}

#projectContainer>div:nth-child(1) {
  margin-left: 1em;
}

.projectCard {
  background-size: cover;
  background-position: center;
  min-width: 25em;
  min-height: 10em;
  display: flex;
  align-items: end;
  justify-content: center;
  color: white;
  border-radius: 16px;
  position: relative;
  overflow: hidden;
}

.projectCard::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.55);
  border-radius: 16px;
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(10.5px);
  -webkit-backdrop-filter: blur(10.5px);
  border: 0.5px solid rgb(46, 46, 46, 0.50);
}

.projectCard .content {
  position: relative;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  align-items: start;
  flex-direction: column;
  padding: 2em;
  justify-content: center;
  z-index: 1;
  gap: 1em;
}

.projectTechIcon {
  height: 60%;
}

.projectCardYear {
  font-size: 70%;
}

.ctHeader {
  width: 100%;
  display: flex;
  align-items: start;
  flex-direction: column;
  justify-content: start;
  h3{
    font-size: 160%;
  }
}

.techIcons{
  width: 100%;
  height: 2em;
  display: flex;
  align-items: center;
  gap: 2em;
}

